// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`liquid tokenizer syntax conditions-1 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Person",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "is:",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "If",
    "value": "{% if personType == 'cool' %}",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "cool",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Else",
    "value": "{% else %}",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "not",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "cool.",
  },
]
`;

exports[`liquid tokenizer syntax conditions-2 1`] = `
Array [
  Object {
    "type": "If",
    "value": "{%if var == \\"a\\"%}",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "A",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Else",
    "value": "{%else%}",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "B",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "was",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "the",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "point",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "we",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "examined.",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "Now",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "examine",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "let's",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "examine",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "others.",
  },
]
`;

exports[`liquid tokenizer syntax conditions-3 1`] = `
Array [
  Object {
    "type": "If",
    "value": "{% if var == \\"a\\" %}",
  },
  Object {
    "type": "Newline",
    "value": "

",
  },
  Object {
    "type": "Text",
    "value": "Content",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "when",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "var",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "is",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "equal",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "a",
  },
  Object {
    "type": "Newline",
    "value": "

",
  },
  Object {
    "type": "Else",
    "value": "{% else %}",
  },
  Object {
    "type": "Newline",
    "value": "

",
  },
  Object {
    "type": "Text",
    "value": "Content",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "when",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "var",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "is",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "not",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "equal",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "a",
  },
  Object {
    "type": "Newline",
    "value": "

",
  },
  Object {
    "type": "EndIf",
    "value": "{% endif %}",
  },
  Object {
    "type": "Newline",
    "value": "

",
  },
]
`;

exports[`liquid tokenizer syntax filter-1 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Hello",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "P",
  },
  Object {
    "type": "Filter",
    "value": "{{user.name | capitalize}}",
  },
  Object {
    "type": "Text",
    "value": "!",
  },
]
`;

exports[`liquid tokenizer syntax filter-2 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "We",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "have",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Filter",
    "value": "{{user.name | length}}",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "users.",
  },
]
`;

exports[`liquid tokenizer syntax filter-3 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Users",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "amount:",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Filter",
    "value": "{{ user.name | length }}",
  },
  Object {
    "type": "Text",
    "value": ".",
  },
]
`;

exports[`liquid tokenizer syntax filter-4 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Users",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "amount:",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Filter",
    "value": "{{ user_name-cool | length }}",
  },
  Object {
    "type": "Text",
    "value": ".",
  },
]
`;

exports[`liquid tokenizer syntax functions-1 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Hello",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "P",
  },
  Object {
    "type": "Function",
    "value": "{{ user.name.slice(1, 2) }}",
  },
  Object {
    "type": "Text",
    "value": "vel!",
  },
]
`;

exports[`liquid tokenizer syntax functions-2 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Sentence",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Function",
    "value": "{{user.name.slice(1)}}",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "content",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "after.",
  },
]
`;

exports[`liquid tokenizer syntax functions-3 1`] = `
Array [
  Object {
    "type": "Function",
    "value": "{{user.slice(1)}}",
  },
  Object {
    "type": "Text",
    "value": ".",
  },
]
`;

exports[`liquid tokenizer syntax functions-4 1`] = `
Array [
  Object {
    "type": "Function",
    "value": "{{user_name-cool.slice(1)}}",
  },
  Object {
    "type": "Text",
    "value": ".",
  },
]
`;

exports[`liquid tokenizer syntax loop-1 1`] = `
Array [
  Object {
    "type": "ForInLoop",
    "value": "{% for x in xs %}",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "x",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "EndForInLoop",
    "value": "{% endfor %}",
  },
]
`;

exports[`liquid tokenizer syntax loop-2 1`] = `
Array [
  Object {
    "type": "ForInLoop",
    "value": "{%for x in xs%}",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "x",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "EndForInLoop",
    "value": "{%endfor%}",
  },
]
`;

exports[`liquid tokenizer syntax text-1 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Sentence",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "with",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "plain",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "text.",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "Another",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "plain",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "text",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "sentence.",
  },
]
`;

exports[`liquid tokenizer syntax text-2 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Sentence.",
  },
  Object {
    "type": "Space",
    "value": "    ",
  },
  Object {
    "type": "Text",
    "value": "Sentence",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "after",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "4",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "spaces.",
  },
]
`;

exports[`liquid tokenizer syntax variable-1 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Hello",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Variable",
    "value": "{{user.name}}",
  },
  Object {
    "type": "Text",
    "value": "!",
  },
]
`;

exports[`liquid tokenizer syntax variable-2 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "We",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "have",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Variable",
    "value": "{{ user.name }}",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "users.",
  },
]
`;

exports[`liquid tokenizer syntax variable-3 1`] = `
Array [
  Object {
    "type": "Text",
    "value": "Users",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Text",
    "value": "amount:",
  },
  Object {
    "type": "Space",
    "value": " ",
  },
  Object {
    "type": "Variable",
    "value": "{{user.name}}",
  },
  Object {
    "type": "Text",
    "value": ".",
  },
]
`;
